Changed index and sourcetypes from bro_json & bro_json_* to json_bro & json_bro_*, respectively.

--- a/local/props.conf
+++ b/local/props.conf
@@ -16,7 +16,7 @@ TRANSFORMS-BroAutoType = BroAutoType, TrashComments
 
 # index-time operations to dynamically extract fields based on the log
 # header and rename the sourcetype (bro_conn, bro_http, bro_smtp, etc).
-[bro_json]
+[json_bro]
 KV_MODE = JSON
 SHOULD_LINEMERGE = false
 TRUNCATE = 0
@@ -26,7 +26,7 @@ TRANSFORMS-BroAutoType = BroAutoTypeJSON, TrashComments, rename_host_to_hostname
 
 # search-time operations to enrich bro logs.
 # Match all bro_* sourcetypes.
-[(?::){0}bro_json_*]
+[(?::){0}json_bro_*]
 KV_MODE = JSON
 SHOULD_LINEMERGE = false
 TRUNCATE = 0
@@ -131,6 +131,7 @@ FIELDALIAS-username = username as user
 #FIELDALIAS-x_originating_ip = 
 FIELDALIAS-src_mac = mac AS src_mac
 FIELDALIAS-lease_duration = lease_time AS lease_duration
+FIELDALIAS-zzz_stripper = *{} AS *
 
 # Alerts
 FIELDALIAS-body_msg = msg AS body
@@ -139,8 +140,38 @@ FIELDALIAS-subject = note AS subject
 EVAL-vendor_action = split(actions, ",")
 EVAL-severity = if(isnotnull(body),"unknown", severity)
 
-[bro_json_smtp]
+[json_bro_conn]
+FIELDALIAS-tunnel_parents = tunnel_parents{} AS tunnel_parents
+
+[json_bro_dns]
+FIELDALIAS-answers = answers{} AS answers
+FIELDALIAS-TTLs = TTLs{} AS TTLs
+EVAL-answer = mvindex(answers, 0)
+
+[json_bro_files]
+FIELDALIAS-analyzers = analyzers{} AS analyzers
+FIELDALIAS-conn_uids = conn_uids{} AS conn_uids
+FIELDALIAS-rx_hosts = rx_hosts{} AS rx_hosts
+FIELDALIAS-tx_hosts = tx_hosts{} AS tx_hosts
+
+[json_bro_http]
+FIELDALIAS-dest_host = hostname AS dest_host
+FIELDALIAS-resp_fuids = resp_fuids{} AS resp_fuids
+FIELDALIAS-mime_types = resp_mime_types{} AS resp_mime_types
+FIELDALIAS-tags = tags{} AS tags
+
+[json_bro_notice]
+FIELDALIAS-actions = actions{} AS actions
+
+[json_bro_services]
+FIELDALIAS-service = service{} AS service
+
+[json_bro_ssl]
+FIELDALIAS-cert_chain = cert_chain_fuids{} AS cert_chain_fuids
+FIELDALIAS-client_cert_chain = client_cert_chain_fuids{} AS client_cert_chain_fuids
+
+[json_bro_smtp]
 LOOKUP-protocol_for_bro_smtp = bro_protocol_lookup sourcetype OUTPUT protocol
 
-[bro_json_http]
-FIELDALIAS-dest_host = hostname AS dest_host
+[json_bro_x509]
+FIELDALIAS-san_dns = san.dns{} AS san_dns
