--- a/local/eventtypes.conf
+++ b/local/eventtypes.conf
@@ -1,33 +1,33 @@
 [bro_dns]
-search = index=* (sourcetype="bro_dns" OR sourcetype="bro_json_dns")
+search = index=* (sourcetype="bro_dns" OR sourcetype="json_bro_dns")
 
 [bro_conn]
-search = index=* (sourcetype="bro_conn" OR sourcetype="bro_json_conn")
+search = index=* (sourcetype="bro_conn" OR sourcetype="json_bro_conn")
 
 [bro_http]
-search = index=* (sourcetype="bro_http" OR sourcetype="bro_json_http")
+search = index=* (sourcetype="bro_http" OR sourcetype="json_bro_http")
 
 [bro_smtp]
-search = index=* (sourcetype="bro_smtp" OR sourcetype="bro_json_smtp")
+search = index=* (sourcetype="bro_smtp" OR sourcetype="json_bro_smtp")
 
 [bro_smtp_entities]
-search = index=* (sourcetype="bro_smtp_entities" OR sourcetype="bro_json_smtp_entities")
+search = index=* (sourcetype="bro_smtp_entities" OR sourcetype="json_bro_smtp_entities")
 
 [bro_ftp]
-search = index=* (sourcetype="bro_ftp" OR sourcetype="bro_json_ftp")
+search = index=* (sourcetype="bro_ftp" OR sourcetype="json_bro_ftp")
 
 [bro_ssh]
-search = index=* (sourcetype="bro_ssh" OR sourcetype="bro_json_ssh")
+search = index=* (sourcetype="bro_ssh" OR sourcetype="json_bro_ssh")
 
 [bro_ssl]
-search = index=* (sourcetype="bro_ssl" OR sourcetype="bro_json_ssl")
+search = index=* (sourcetype="bro_ssl" OR sourcetype="json_bro_ssl")
 
 [bro_dhcp]
-search = index=* (sourcetype="bro_dhcp" OR sourcetype="bro_json_dhcp")
+search = index=* (sourcetype="bro_dhcp" OR sourcetype="json_bro_dhcp")
 #tags = network session dhcp
 
 [bro_notice]
-search = index=* (sourcetype="bro_notice" OR sourcetype="bro_json_notice")
+search = index=* (sourcetype="bro_notice" OR sourcetype="json_bro_notice")
 #tags = alert
 
 
