--- a/local/indexes.conf
+++ b/local/indexes.conf
@@ -3,7 +3,7 @@ homePath = $SPLUNK_DB/bro/db
 coldPath = $SPLUNK_DB/bro/colddb
 thawedPath = $SPLUNK_DB/bro/thaweddb
 
-[bro_json]
-homePath = $SPLUNK_DB/bro_json/db
-coldPath = $SPLUNK_DB/bro_json/colddb
-thawedPath = $SPLUNK_DB/bro_json/thaweddb
+[json_bro]
+homePath = $SPLUNK_DB/json_bro/db
+coldPath = $SPLUNK_DB/json_bro/colddb
+thawedPath = $SPLUNK_DB/json_bro/thaweddb
