--- a/local/inputs.conf
+++ b/local/inputs.conf
@@ -1,6 +1,6 @@
 [monitor:///opt/bro/logs/current]
-index = bro_json
-sourcetype = bro_json
+index = json_bro
+sourcetype = json_bro
 whitelist = .*\.log$
 blacklist = .*(communication|stderr)\.log$
 disabled = 0
