Moved files from local/ to default/

--- a/default/app.conf
+++ b/default/app.conf
@@ -1,21 +1,16 @@
-# Copyright (C) 2005-2015 Splunk Inc. All Rights Reserved.
-#
-## Splunk app configuration file
-
 [install]
 is_configured = false 
 state = enabled 
-build = 3
+build = 1
 
 [launcher]
-author=Splunk, Inc.
-version=3.2.0
-description = The Splunk Add-on for Bro IDS (www.bro.org)
+author=Joshua Hart
+version=0.1
+description = "Branch of Splunk's Bro IDS technology add-on using Bro's built-in JSON log writer"
 
 [ui]
 is_visible = false
-label = Splunk Add-on for Bro IDS
-docs_section_override=AddOns:released
+label = JSON Bro
 
 [package]
-id = Splunk_TA_bro
+id = splunk-ta-bro-json
