--- a/default/transforms.conf
+++ b/default/transforms.conf
@@ -9,12 +9,18 @@ FORMAT = nullQueue
 # Dynamic source typing based on log filename
 # Match: conn.log, bro.conn.log, 
 # md5.bro.conn.log, whatever.conn.log
-[BroAutoType]
+[BroAutoTypeJSON]
 DEST_KEY = MetaData:Sourcetype
 SOURCE_KEY = MetaData:Source
 REGEX = (?:[a-zA-Z0-9]+\.)?([a-zA-Z0-9]+)\.log
-FORMAT = sourcetype::bro_$1
+FORMAT = sourcetype::json_bro_$1
 WRITE_META = true
+
+# Change the 'host' field to 'hostname'
+[rename_host_to_hostname]
+REGEX = (?m)^(.*)(\"host\"\:)(.*)
+FORMAT = $1"hostname":$3
+DEST_KEY = _raw
 
 ######################
 # FIELD CONVERSIONS  #
