--- a/default/inputs.conf
+++ b/default/inputs.conf
@@ -1,18 +1,9 @@
-# defaults options for new stanza
-[pcap_monitor]
-recursive = False
+# Copy the monitor stanza to ../local/inputs.conf
+# and change to disabled = 0
 
-store_dir  = $SPLUNK_HOME/var/spool/splunk
-
-bro_bin    = /opt/bro/bin/bro
-bro_opts   = -C
-bro_script = None
-bro_seeds  = None
-bro_merge  = False
-
-# 1KB max size by default
-content_maxsize = 1024
-
-# 30 min maximum execution time
-run_maxtime = 1800
-
+[monitor:///opt/bro/logs/current]
+index = json_bro
+sourcetype = json_bro
+whitelist = .*\.log$
+blacklist = .*(communication|stderr)\.log$
+disabled = 1
