--- a/default/props.conf
+++ b/default/props.conf
@@ -1,35 +1,36 @@
-# [source::...bro.*.log]
-# SHOULD_LINEMERGE = false
-# TRUNCATE = 0
-# MAX_TIMESTAMP_LOOKAHEAD = 20
-# TIME_FORMAT = %s.%6N
-# TRANSFORMS-BroAutoType = BroAutoType, TrashComments
-# INDEXED_EXTRACTIONS = TSV
-# FIELD_HEADER_REGEX = ^#fields\t(.*)
-# FIELD_DELIMITER = \t
-# FIELD_QUOTE = \t
+###########################################################
+## This props.conf file is designed to work with Bro 2.3+
+## writing log files in JSON format vs. TSV
+##
+## Use with caution and only if you plan to log in JSON
+## format ONLY!
+###########################################################
+
+[source::...bro.*.log]
+KV_MODE = JSON
+SHOULD_LINEMERGE = false
+TRUNCATE = 0
+TIME_PREFIX = \"ts\"\:
+TIME_FORMAT = %s.%6N
+TRANSFORMS-BroAutoType = BroAutoType, TrashComments
 
 # index-time operations to dynamically extract fields based on the log
 # header and rename the sourcetype (bro_conn, bro_http, bro_smtp, etc).
-# [bro]
-# SHOULD_LINEMERGE = false
-# TRUNCATE = 0
-# MAX_TIMESTAMP_LOOKAHEAD = 20
-# TIME_FORMAT = %s.%6N
-# TRANSFORMS-BroAutoType = BroAutoType, TrashComments
-# INDEXED_EXTRACTIONS = TSV
-# FIELD_HEADER_REGEX = ^#fields\t(.*)
-# FIELD_DELIMITER = \t
-# FIELD_QUOTE = \t
-
+[json_bro]
+KV_MODE = JSON
+SHOULD_LINEMERGE = false
+TRUNCATE = 0
+TIME_PREFIX = \"ts\"\:
+TIME_FORMAT = %s.%6N
+TRANSFORMS-BroAutoType = BroAutoTypeJSON, TrashComments, rename_host_to_hostname
 
 # search-time operations to enrich bro logs.
 # Match all bro_* sourcetypes.
-[(?::){0}bro_*]
+[(?::){0}json_bro_*]
+KV_MODE = JSON
 SHOULD_LINEMERGE = false
 TRUNCATE = 0
-
-MAX_TIMESTAMP_LOOKAHEAD = 20
+TIME_PREFIX = \"ts\"\:
 TIME_FORMAT = %s.%6N
 
 LOOKUP-LookupTCFlag    = LookupTCFlag TC OUTPUT flag
@@ -54,8 +55,11 @@ EVAL-duration = if(isnum(duration),duration,null())
 FIELDALIAS-content_len = content_len AS message_size
 #FIELDALIAS-date =
 FIELDALIAS-dest = id_resp_h AS dest
+FIELDALIAS-dest = id.resp_h AS dest
 FIELDALIAS-dest_ip = id_resp_h AS dest_ip
+FIELDALIAS-dest_ip = id.resp_h AS dest_ip
 FIELDALIAS-dest_port = id_resp_p AS dest_port
+FIELDALIAS-dest_port = id.resp_p AS dest_port
 #FIELDALIAS-duration
 FIELDALIAS-dvc = extracted_host AS dvc
 FIELDALIAS-emailAddress = emailAddress as sender
@@ -105,8 +109,11 @@ FIELDALIAS-resp_pkts = resp_pkts AS packets_in
 #FIELDALIAS-server_header_names
 FIELDALIAS-service= service AS app
 FIELDALIAS-src = id_orig_h AS src
+FIELDALIAS-src = id.orig_h AS src
 FIELDALIAS-src_ip = id_orig_h AS src_ip
+FIELDALIAS-src_ip = id.orig_h AS src_ip
 FIELDALIAS-src_port = id_orig_p AS src_port
+FIELDALIAS-src_port = id.origi_p AS src_port
 FIELDALIAS-status_code = status_code AS status
 #FIELDALIAS-status_msg 
 #FIELDALIAS-subject = subject AS message_subject
@@ -124,6 +131,7 @@ FIELDALIAS-username = username as user
 #FIELDALIAS-x_originating_ip = 
 FIELDALIAS-src_mac = mac AS src_mac
 FIELDALIAS-lease_duration = lease_time AS lease_duration
+FIELDALIAS-zzz_stripper = *{} AS *
 
 # Alerts
 FIELDALIAS-body_msg = msg AS body
@@ -132,5 +140,38 @@ FIELDALIAS-subject = note AS subject
 EVAL-vendor_action = split(actions, ",")
 EVAL-severity = if(isnotnull(body),"unknown", severity)
 
-[bro_smtp]
+[json_bro_conn]
+FIELDALIAS-tunnel_parents = tunnel_parents{} AS tunnel_parents
+
+[json_bro_dns]
+FIELDALIAS-answers = answers{} AS answers
+FIELDALIAS-TTLs = TTLs{} AS TTLs
+EVAL-answer = mvindex(answers, 0)
+
+[json_bro_files]
+FIELDALIAS-analyzers = analyzers{} AS analyzers
+FIELDALIAS-conn_uids = conn_uids{} AS conn_uids
+FIELDALIAS-rx_hosts = rx_hosts{} AS rx_hosts
+FIELDALIAS-tx_hosts = tx_hosts{} AS tx_hosts
+
+[json_bro_http]
+FIELDALIAS-dest_host = hostname AS dest_host
+FIELDALIAS-resp_fuids = resp_fuids{} AS resp_fuids
+FIELDALIAS-mime_types = resp_mime_types{} AS resp_mime_types
+FIELDALIAS-tags = tags{} AS tags
+
+[json_bro_notice]
+FIELDALIAS-actions = actions{} AS actions
+
+[json_bro_services]
+FIELDALIAS-service = service{} AS service
+
+[json_bro_ssl]
+FIELDALIAS-cert_chain = cert_chain_fuids{} AS cert_chain_fuids
+FIELDALIAS-client_cert_chain = client_cert_chain_fuids{} AS client_cert_chain_fuids
+
+[json_bro_smtp]
 LOOKUP-protocol_for_bro_smtp = bro_protocol_lookup sourcetype OUTPUT protocol
+
+[json_bro_x509]
+FIELDALIAS-san_dns = san.dns{} AS san_dns
