Updated props.conf to reflect JSON formatted smpt logs

--- a/default/props.conf
+++ b/default/props.conf
@@ -95,6 +95,7 @@ FIELDALIAS-proxied = proxied AS product
 FIELDALIAS-qclass_name = qclass_name AS record_class
 FIELDALIAS-qtype_name  = qtype_name  AS record_type
 FIELDALIAS-query = query as url
+FIELDALIAS-rcptto = rcptto{} AS rcptto
 FIELDALIAS-rcptto = rcptto AS recipients
 FIELDALIAS-referrer = referrer AS http_referrer
 #FIELDALIAS-reply_code =
@@ -171,7 +172,11 @@ FIELDALIAS-cert_chain = cert_chain_fuids{} AS cert_chain_fuids
 FIELDALIAS-client_cert_chain = client_cert_chain_fuids{} AS client_cert_chain_fuids
 
 [json_bro_smtp]
-LOOKUP-protocol_for_bro_smtp = bro_protocol_lookup sourcetype OUTPUT protocol
+LOOKUP-protocol_for_bro_smtp = bro_protocol_lookup sourcetype OUTPUT protoco
+FIELDALIAS-sender = from AS sender
+FIELDALIAS-to = to{} AS to
+FIELDALIAS-path = path{} AS path
+FIELDALIAS-fuids = fuids{} AS fuids
 
 [json_bro_x509]
 FIELDALIAS-san_dns = san.dns{} AS san_dns
