Started a TODO list

--- a/default/props.conf
+++ b/default/props.conf
@@ -49,6 +49,7 @@ EVAL-duration = if(isnum(duration),duration,null())
 ###############
 # CIM TAGGING #
 ###############
+EXTRACT-filename = .*/(?P<filename>[^/]+$) in arg
 #FIELDALIAS-arg =
 #FIELDALIAS-client_header_names 
 #FIELDALIAS-conn_state
@@ -163,6 +164,9 @@ FIELDALIAS-tags = tags{} AS tags
 
 [json_bro_notice]
 FIELDALIAS-actions = actions{} AS actions
+
+[json_bro_pe]
+FIELDALIAS-section_names = section_names{} AS section_names
 
 [json_bro_services]
 FIELDALIAS-service = service{} AS service
