--- a/default/props.conf
+++ b/default/props.conf
@@ -176,7 +176,7 @@ FIELDALIAS-cert_chain = cert_chain_fuids{} AS cert_chain_fuids
 FIELDALIAS-client_cert_chain = client_cert_chain_fuids{} AS client_cert_chain_fuids
 
 [json_bro_smtp]
-LOOKUP-protocol_for_bro_smtp = bro_protocol_lookup sourcetype OUTPUT protoco
+LOOKUP-protocol_for_bro_smtp = bro_protocol_lookup sourcetype OUTPUT protocol
 FIELDALIAS-sender = from AS sender
 FIELDALIAS-to = to{} AS to
 FIELDALIAS-path = path{} AS path
