--- a/default/props.conf
+++ b/default/props.conf
@@ -50,6 +50,7 @@ EVAL-duration = if(isnum(duration),duration,null())
 # CIM TAGGING #
 ###############
 EXTRACT-filename = .*/(?P<filename>[^/]+$) in arg
+FIELDALIAS-json_array = *{} as *
 #FIELDALIAS-arg =
 #FIELDALIAS-client_header_names 
 #FIELDALIAS-conn_state
