Updated inputs.conf to use index=bro

--- a/default/inputs.conf
+++ b/default/inputs.conf
@@ -2,7 +2,7 @@
 # and change to disabled = 0
 
 [monitor:///opt/bro/logs/current]
-index = json_bro
+index = bro
 sourcetype = json_bro
 whitelist = .*\.log$
 blacklist = .*(communication|stderr)\.log$
